--- a/thingstodo/Frontend/src/layouts/Landing/landing.css
+++ b/thingstodo/Frontend/src/layouts/Landing/landing.css
@@ -9,7 +9,7 @@
 
 .carousel-inner img {
 	height: 100%;
-	object-fit: cover;
+	object-fit: contain;
   }
 
 /* Additional styling for content below carousel */
